--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <p>Mon site</p>
 
     <a href="https://edstudio.fr/">Enzo</a>
+
+    <a href="https://www.youtube.com/c/EnzoDegraeve">Enzo</a>
 </body>
 </html>
