--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>MDS</h1>
     <p>Mon site</p>
 
-    <a href="https://edstudio.fr/">Enzo</a>
+    <a href="https://edstudio.fr/">1fo-Tech</a>
 
     <a href="https://www.youtube.com/c/EnzoDegraeve">Enzo</a>
 </body>
